Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,8 +1,48 @@
 <!DOCTYPE html>
 <html>
-<title>Ara Framework - A full-stack and high performance web framework for Java</title>
-<body>
-<h1>Ara Framework</h1> <h3>A full-stack and high performance web framework for Java</h3>
-<p>V1 is in progress.</p>
-</body>
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+
+    <title>Ara Framework by araframework</title>
+  </head>
+
+  <body>
+
+    <header>
+      <div class="container">
+        <h1>Ara Framework</h1>
+        <h2>A full-stack and high performance web framework for Java</h2>
+
+        <section id="downloads">
+          <a href="https://github.com/araframework" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
+
+    <div class="container">
+      <section id="main_content">
+        <h3>
+<a name="milestone" class="anchor" href="#milestone"><span class="octicon octicon-link"></span></a>Milestone</h3>
+
+<p>Version 1.0 Milestone 1 planed to release at 7th July.</p>
+
+<pre><code>Basic configuration for web server
+Basic web server with http and https
+Basic skeleton and mvc, api for developer
+</code></pre>
+
+<h3>
+<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<p>Check out the documentation at <a href="http://www.araframework.org">http://www.araframework.org</a> or contact the team.</p>
+      </section>
+    </div>
+
+    
+  </body>
 </html>
