Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h3>
 <a name="milestone" class="anchor" href="#milestone"><span class="octicon octicon-link"></span></a>Milestone</h3>
 
-<p>Version 1.0 Milestone 1 planed to release at 7th July.</p>
+<p>Version 1.0 Milestone 1 planed to release after July.</p>
 
 <pre><code>Basic configuration for web server
 Basic web server with http and https
