--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <div class="container">
         <h1>Ara Framework</h1>
-        <h2>A full-stack and high performance web framework for Java</h2>
+        <h2>A full-stack and high performance web framework</h2>
 
         <section id="downloads">
           <a href="https://github.com/araframework" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
@@ -29,7 +29,7 @@
         <h3>
 <a name="milestone" class="anchor" href="#milestone"><span class="octicon octicon-link"></span></a>Milestone</h3>
 
-<p>Version 1.0 Milestone 1 planed to release after July.</p>
+<p>Version 1.0 Milestone 1</p>
 
 <pre><code>Basic configuration for web server
 Basic web server with http and https
