--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ http://localhost:8600/hello/abc123 will show abc123
 </code></pre>
 
 <h3><a name="milestone" class="anchor" href="#milestone"><span class="octicon octicon-link"></span></a>Another Excample</h3>
-<p>http://github.com/atlanssia/jackdaw</p>
+<p><a href="http://github.com/atlanssia/jackdaw">Jackdaw - An apache kafka monitor tool</a></p>
 
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
